--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -36,6 +36,11 @@ router adaptive-virtual-topology
       match application-profile default
          avt profile DEFAULT-AVT-POLICY-DEFAULT
    !
+   policy DEFAULT-POLICY
+      !
+      match application-profile default
+         avt profile DEFAULT-POLICY-DEFAULT
+   !
    policy PROD-AVT-POLICY
       !
       match application-profile VOICE
@@ -64,6 +69,15 @@ router adaptive-virtual-topology
    profile DEFAULT-AVT-POLICY-VIDEO
       path-selection load-balance LB-DEFAULT-AVT-POLICY-VIDEO
    !
+   profile DEFAULT-AVT-POLICY-WITH-CP-DEFAULT
+      path-selection load-balance LB-DEFAULT-AVT-POLICY-WITH-CP-DEFAULT
+   !
+   profile DEFAULT-AVT-POLICY-WITH-CP-VIDEO
+      path-selection load-balance LB-DEFAULT-AVT-POLICY-WITH-CP-VIDEO
+   !
+   profile DEFAULT-POLICY-DEFAULT
+      path-selection load-balance LB-DEFAULT-POLICY-DEFAULT
+   !
    profile PROD-AVT-POLICY-DEFAULT
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
    !
@@ -78,6 +92,10 @@ router adaptive-virtual-topology
    !
    profile TRANSIT-AVT-POLICY-VOICE
       path-selection load-balance LB-TRANSIT-AVT-POLICY-VOICE
+   !
+   vrf ATTRACTED-VRF-FROM-UPLINK
+      avt policy DEFAULT-POLICY
+      avt profile DEFAULT-POLICY-DEFAULT id 1
    !
    vrf default
       avt policy DEFAULT-AVT-POLICY-WITH-CP
@@ -147,6 +165,11 @@ router path-selection
       path-group MPLS priority 42
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
+      path-group INET
+      path-group LAN_HA
+      path-group MPLS
+   !
+   load-balance policy LB-DEFAULT-POLICY-DEFAULT
       path-group INET
       path-group LAN_HA
       path-group MPLS
