--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
@@ -220,6 +220,10 @@ router_adaptive_virtual_topology:
   profiles:
   - name: CONTROL-PLANE-PROFILE
     load_balance_policy: LB-CONTROL-PLANE-PROFILE
+  - name: DEFAULT-AVT-POLICY-WITH-CP-VIDEO
+    load_balance_policy: LB-DEFAULT-AVT-POLICY-WITH-CP-VIDEO
+  - name: DEFAULT-AVT-POLICY-WITH-CP-DEFAULT
+    load_balance_policy: LB-DEFAULT-AVT-POLICY-WITH-CP-DEFAULT
   - name: PROD-AVT-POLICY-VOICE
     load_balance_policy: LB-PROD-AVT-POLICY-VOICE
   - name: PROD-AVT-POLICY-VIDEO
@@ -234,6 +238,8 @@ router_adaptive_virtual_topology:
     load_balance_policy: LB-TRANSIT-AVT-POLICY-VOICE
   - name: TRANSIT-AVT-POLICY-DEFAULT
     load_balance_policy: LB-TRANSIT-AVT-POLICY-DEFAULT
+  - name: DEFAULT-POLICY-DEFAULT
+    load_balance_policy: LB-DEFAULT-POLICY-DEFAULT
   vrfs:
   - name: default
     policy: DEFAULT-AVT-POLICY-WITH-CP
@@ -267,7 +273,20 @@ router_adaptive_virtual_topology:
       id: 42
     - name: TRANSIT-AVT-POLICY-DEFAULT
       id: 1
+  - name: ATTRACTED-VRF-FROM-UPLINK
+    policy: DEFAULT-POLICY
+    profiles:
+    - name: DEFAULT-POLICY-DEFAULT
+      id: 1
   policies:
+  - name: DEFAULT-AVT-POLICY-WITH-CP
+    matches:
+    - application_profile: CONTROL-PLANE-APPLICATION-PROFILE
+      avt_profile: CONTROL-PLANE-PROFILE
+    - application_profile: VIDEO
+      avt_profile: DEFAULT-AVT-POLICY-VIDEO
+    - application_profile: default
+      avt_profile: DEFAULT-AVT-POLICY-DEFAULT
   - name: PROD-AVT-POLICY
     matches:
     - application_profile: VOICE
@@ -288,14 +307,10 @@ router_adaptive_virtual_topology:
       avt_profile: TRANSIT-AVT-POLICY-VOICE
     - application_profile: default
       avt_profile: TRANSIT-AVT-POLICY-DEFAULT
-  - name: DEFAULT-AVT-POLICY-WITH-CP
+  - name: DEFAULT-POLICY
     matches:
-    - application_profile: CONTROL-PLANE-APPLICATION-PROFILE
-      avt_profile: CONTROL-PLANE-PROFILE
-    - application_profile: VIDEO
-      avt_profile: DEFAULT-AVT-POLICY-VIDEO
     - application_profile: default
-      avt_profile: DEFAULT-AVT-POLICY-DEFAULT
+      avt_profile: DEFAULT-POLICY-DEFAULT
 router_bfd:
   multihop:
     interval: 300
@@ -344,6 +359,18 @@ router_path_selection:
     - name: LAN_HA
     - name: INET
     - name: MPLS
+  - name: LB-DEFAULT-AVT-POLICY-VIDEO
+    path_groups:
+    - name: LAN_HA
+    - name: MPLS
+    - name: INET
+  - name: LB-DEFAULT-AVT-POLICY-DEFAULT
+    path_groups:
+    - name: LAN_HA
+    - name: INET
+    - name: Equinix
+    - name: MPLS
+      priority: 42
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
     - name: LAN_HA
@@ -365,18 +392,6 @@ router_path_selection:
     - name: INET
     - name: MPLS
       priority: 2
-  - name: LB-DEFAULT-AVT-POLICY-VIDEO
-    path_groups:
-    - name: LAN_HA
-    - name: MPLS
-    - name: INET
-  - name: LB-DEFAULT-AVT-POLICY-DEFAULT
-    path_groups:
-    - name: LAN_HA
-    - name: INET
-    - name: Equinix
-    - name: MPLS
-      priority: 42
   - name: LB-TRANSIT-AVT-POLICY-VOICE
     path_groups:
     - name: LAN_HA
@@ -389,6 +404,11 @@ router_path_selection:
     - name: INET
     - name: MPLS
       priority: 2
+  - name: LB-DEFAULT-POLICY-DEFAULT
+    path_groups:
+    - name: LAN_HA
+    - name: INET
+    - name: MPLS
 router_traffic_engineering:
   enabled: true
 stun:
@@ -398,15 +418,15 @@ stun:
     - Ethernet2
 application_traffic_recognition:
   application_profiles:
-  - name: VOICE
-    applications:
-    - name: CUSTOM-VOICE-APPLICATION
   - name: VIDEO
     categories:
     - name: VIDEO1
     applications:
     - name: CUSTOM-APPLICATION-1
     - name: skype
+  - name: VOICE
+    applications:
+    - name: CUSTOM-VOICE-APPLICATION
   - name: CONTROL-PLANE-APPLICATION-PROFILE
     applications:
     - name: CONTROL-PLANE-APPLICATION
@@ -656,3 +676,15 @@ metadata:
           preference: preferred
         - name: MPLS
           preference: alternate
+    - name: ATTRACTED-VRF-FROM-UPLINK
+      vni: 666
+      avts:
+      - id: 1
+        name: DEFAULT-POLICY-DEFAULT
+        pathgroups:
+        - name: LAN_HA
+          preference: preferred
+        - name: INET
+          preference: preferred
+        - name: MPLS
+          preference: preferred
