--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
@@ -100,18 +100,14 @@ tenants:
     vrfs:
       - name: default
         vrf_id: 1
-        # Testing VRF default without wan_vni set to check it is inserted and
-        # does not explode
       - name: PROD
         vrf_id: 42
-        wan_vni: 42
         svis:
           - id: 100
             name: VLAN100
             ip_address_virtual: 10.0.100.1/24
       - name: IT
         vrf_id: 100
-        wan_vni: 100
     l2vlans:
       - id: 101
         name: VLAN101
@@ -119,11 +115,13 @@ tenants:
 wan_virtual_topologies:
   vrfs:
     - name: default
-      policy: DEFAULT-AVT-POLICY
+      policy: DEFAULT-AUTOVPN-POLICY
+      wan_vni: 1
     - name: PROD
-      policy: PROD-AVT-POLICY
+      policy: PROD-AUTOVPN-POLICY
+      wan_vni: 42
   policies:
-    - name: PROD-AVT-POLICY
+    - name: PROD-AUTOVPN-POLICY
       default_virtual_topology:
         path_groups:
           - names: [INET]
@@ -137,7 +135,7 @@ wan_virtual_topologies:
           path_groups:
             - names: [INET]
               preference: preferred
-    - name: DEFAULT-AVT-POLICY
+    - name: DEFAULT-AUTOVPN-POLICY
       default_virtual_topology:
         drop_unmatched: true
       application_virtual_topologies:
