--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -320,6 +320,7 @@ all:
               hosts:
                 autovpn-edge-no-default-policy:
                 cv-pathfinder-edge-no-default-policy:
+                cv-pathfinder-edge-custom-default-policy:
         UPLINK_P2P_VRFS_TESTS:
           hosts:
             UPLINK_P2P_VRFS_TESTS_SPINE1:
