--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
@@ -22,17 +22,27 @@ router path-selection
    load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group INET
    !
-   load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
+   load-balance policy LB-DEFAULT-POLICY-DEFAULT
       path-group INET
    !
-   policy DEFAULT-AVT-POLICY-WITH-CP
+   policy DEFAULT-POLICY
       default-match
-         load-balance LB-DEFAULT-AVT-POLICY-DEFAULT
+         load-balance LB-DEFAULT-POLICY-DEFAULT
+   !
+   policy DEFAULT-POLICY-WITH-CP
+      default-match
+         load-balance LB-DEFAULT-POLICY-DEFAULT
       10 application-profile CONTROL-PLANE-APPLICATION-PROFILE
          load-balance LB-CONTROL-PLANE-PROFILE
    !
    vrf default
-      path-selection-policy DEFAULT-AVT-POLICY-WITH-CP
+      path-selection-policy DEFAULT-POLICY-WITH-CP
+   !
+   vrf IT
+      path-selection-policy DEFAULT-POLICY
+   !
+   vrf PROD
+      path-selection-policy DEFAULT-POLICY
 !
 spanning-tree mode none
 !
