--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-edge.yml
@@ -217,43 +217,43 @@ router_path_selection:
   - name: LB-CONTROL-PLANE-PROFILE
     path_groups:
     - name: INET
-  - name: LB-PROD-AVT-POLICY-VOICE
-    path_groups:
-    - name: INET
-  - name: LB-PROD-AVT-POLICY-VIDEO
-    path_groups:
-    - name: INET
-  - name: LB-PROD-AVT-POLICY-DEFAULT
-    path_groups:
-    - name: INET
-  - name: LB-DEFAULT-AVT-POLICY-IT
+  - name: LB-DEFAULT-AUTOVPN-POLICY-IT
     path_groups:
     - name: INET
       priority: 2
+  - name: LB-PROD-AUTOVPN-POLICY-VOICE
+    path_groups:
+    - name: INET
+  - name: LB-PROD-AUTOVPN-POLICY-VIDEO
+    path_groups:
+    - name: INET
+  - name: LB-PROD-AUTOVPN-POLICY-DEFAULT
+    path_groups:
+    - name: INET
   policies:
-  - name: PROD-AVT-POLICY
-    rules:
-    - id: 10
-      application_profile: VOICE
-      load_balance: LB-PROD-AVT-POLICY-VOICE
-    - id: 20
-      application_profile: VIDEO
-      load_balance: LB-PROD-AVT-POLICY-VIDEO
-    default_match:
-      load_balance: LB-PROD-AVT-POLICY-DEFAULT
-  - name: DEFAULT-AVT-POLICY-WITH-CP
+  - name: DEFAULT-AUTOVPN-POLICY-WITH-CP
     rules:
     - id: 10
       application_profile: CONTROL-PLANE-APPLICATION-PROFILE
       load_balance: LB-CONTROL-PLANE-PROFILE
     - id: 20
       application_profile: IT
-      load_balance: LB-DEFAULT-AVT-POLICY-IT
+      load_balance: LB-DEFAULT-AUTOVPN-POLICY-IT
+  - name: PROD-AUTOVPN-POLICY
+    rules:
+    - id: 10
+      application_profile: VOICE
+      load_balance: LB-PROD-AUTOVPN-POLICY-VOICE
+    - id: 20
+      application_profile: VIDEO
+      load_balance: LB-PROD-AUTOVPN-POLICY-VIDEO
+    default_match:
+      load_balance: LB-PROD-AUTOVPN-POLICY-DEFAULT
   vrfs:
   - name: default
-    path_selection_policy: DEFAULT-AVT-POLICY-WITH-CP
+    path_selection_policy: DEFAULT-AUTOVPN-POLICY-WITH-CP
   - name: PROD
-    path_selection_policy: PROD-AVT-POLICY
+    path_selection_policy: PROD-AUTOVPN-POLICY
 stun:
   client:
     server_profiles:
@@ -263,9 +263,9 @@ stun:
       ip_address: 10.8.8.8
 application_traffic_recognition:
   application_profiles:
+  - name: IT
   - name: VOICE
   - name: VIDEO
-  - name: IT
   - name: CONTROL-PLANE-APPLICATION-PROFILE
     applications:
     - name: CONTROL-PLANE-APPLICATION
